--- a/src/assets/styles/components/angular-material.scss
+++ b/src/assets/styles/components/angular-material.scss
@@ -1,5 +1,4 @@
 @import '~@angular/material/theming';
-@import "elements/_popover-theme";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -10,17 +9,16 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$candy-app-primary: mat-palette($mat-green);
-$candy-app-accent: mat-palette($mat-light-green, A200, A100, A400);
+$mypet-primary: mat-palette($mat-green);
+$mypet-accent: mat-palette($mat-light-green, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn: mat-palette($mat-red);
+$mypet-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+$mypet-theme: mat-light-theme($mypet-primary, $mypet-accent, $mypet-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($candy-app-theme);
-@include mat-expansion-panel-theme($candy-app-theme);
+@include angular-material-theme($mypet-theme);
