--- a/src/app/components/mob-type-select-dialog/mob-type-select-dialog.component.html
+++ b/src/app/components/mob-type-select-dialog/mob-type-select-dialog.component.html
@@ -1,22 +1,22 @@
-<h1 md-dialog-title>Select Mob Types:</h1>
+<h1 mat-dialog-title>Select Mob Types:</h1>
 <div class="mob-type-select">
   <ul>
     <li *ngFor="let type of types">
       <a (click)="type.selected = !type.selected">
         <img [ngClass]="{selected: type.selected}" [src]="'assets/img/mobheads/' +  type.name + '.png'"
-             [mdTooltip]="type.name">
+             [matTooltip]="type.name">
       </a>
     </li>
   </ul>
 </div>
 
-<div md-dialog-actions>
-  <button md-raised-button (click)="selectAll()">Select All</button>
-  <button md-raised-button (click)="selectNone()">Unselect All</button>
+<div mat-dialog-actions>
+  <button mat-raised-button (click)="selectAll()">Select All</button>
+  <button mat-raised-button (click)="selectNone()">Unselect All</button>
 </div>
 
-<div md-dialog-actions>
-  <button md-raised-button (click)="done()">Done</button>
+<div mat-dialog-actions>
+  <button mat-raised-button (click)="done()">Done</button>
 </div>
 
 
