--- a/src/app/components/skill-editor/skill-editor.component.html
+++ b/src/app/components/skill-editor/skill-editor.component.html
@@ -1,9 +1,11 @@
-<md-card *ngIf="(selectedSkilltree$ | async) as skilltree">
-  <md-select placeholder="Select Skill" [(ngModel)]="selectedSkill" (change)="switchSkill($event)">
-    <md-option *ngFor="let skill of skills" [value]="skill">
-      <img [src]="'assets/img/skills/' +  skill.icon" class="mdl-chip__skill"> {{ skill.name }}
-    </md-option>
-  </md-select>
-</md-card>
+<mat-card *ngIf="(selectedSkilltree$ | async) as skilltree" class="spacer-b-1em">
+  <mat-form-field>
+    <mat-select placeholder="Select Skill" [(ngModel)]="selectedSkill" (change)="switchSkill($event)">
+      <mat-option *ngFor="let skill of skills" [value]="skill">
+        <img [src]="'assets/img/skills/' +  skill.icon" class="matl-chip__skill"> {{ skill.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</mat-card>
 
 <app-skill-editor-upgrade></app-skill-editor-upgrade>
