--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -1,12 +1,11 @@
 <div *ngIf="selectedSkilltree$ | async as skilltree">
-  <md-toolbar class="spacer-t-1em spacer-b-1em">
-    <button md-raised-button (click)="addUpgrade(skilltree)">Add Upgrade</button>
-  </md-toolbar>
+  <mat-toolbar class="spacer-t-1em spacer-b-1em">
+    <button mat-raised-button (click)="addUpgrade(skilltree)">Add Upgrade</button>
+  </mat-toolbar>
 
-  <md-popover #rowsPopover="mdPopover" x-position="after" y-position="below"
-              [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
-    <md-card>
-      <md-card-content>
+  <sat-popover #rowsPopover horizontalAlign="after" verticalAlign="below">
+    <mat-card>
+      <mat-card-content>
         <p>The number of rows the inventory will have.<br>
           Format: [+-=][number]<br>
           Examples:<br>
@@ -14,37 +13,37 @@
           -3<br>
           =6
         </p>
-      </md-card-content>
-    </md-card>
-  </md-popover>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
 
   <!--
-  <md-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack?.upgrades">
-    <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
+  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack?.upgrades">
+    <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div>
-      <md-input-container>
-        <input mdInput placeholder="Rows" [value]="upgrade.rows ? upgrade.rows : 0" type="text" pattern="[+-=][0-9]+"
+      <mat-input-container>
+        <input matInput placeholder="Rows" [value]="upgrade.rows ? upgrade.rows : 0" type="text" pattern="[+-=][0-9]+"
                (blur)="update(skilltree, upgrade, 'rows',$event)">
-        <span mdSuffix>rows</span>
-      </md-input-container>
-      <button md-icon-button [mdPopoverTriggerFor]="rowsPopover">
-        <md-icon>info_outline</md-icon>
+        <span matSuffix>rows</span>
+      </mat-input-container>
+      <button mat-icon-button [satPopoverAnchorFor]="rowsPopover">
+        <mat-icon>info_outline</mat-icon>
       </button>
     </div>
     <div>
-      <md-button-toggle-group [value]="upgrade.drop ? upgrade.drop : null">
-        <md-button-toggle [value]="true" mdTooltip="Activate">
-          <md-icon>check_box</md-icon>
-        </md-button-toggle>
-        <md-button-toggle [value]="null" mdTooltip="Don't change">
-          <md-icon>indeterminate_check_box</md-icon>
-        </md-button-toggle>
-        <md-button-toggle [value]="false" mdTooltip="Deactivate">
-          <md-icon>check_box_outline_blank</md-icon>
-        </md-button-toggle>
-      </md-button-toggle-group>
+      <mat-button-toggle-group [value]="upgrade.drop ? upgrade.drop : null">
+        <mat-button-toggle [value]="true" matTooltip="Activate">
+          <mat-icon>check_box</mat-icon>
+        </mat-button-toggle>
+        <mat-button-toggle [value]="null" matTooltip="Don't change">
+          <mat-icon>indeterminate_check_box</mat-icon>
+        </mat-button-toggle>
+        <mat-button-toggle [value]="false" matTooltip="Deactivate">
+          <mat-icon>check_box_outline_blank</mat-icon>
+        </mat-button-toggle>
+      </mat-button-toggle-group>
       <span>Drop content on death?</span>
     </div>
-  </md-expansion-panel>
+  </mat-expansion-panel>
   -->
 </div>
