--- a/src/app/components/skills/health-boost-skill/health-boost-skill.component.html
+++ b/src/app/components/skills/health-boost-skill/health-boost-skill.component.html
@@ -1,11 +1,10 @@
-<md-toolbar class="spacer-t-1em spacer-b-1em">
-  <button md-raised-button (click)="addUpgrade()">Add Upgrade</button>
-</md-toolbar>
+<mat-toolbar class="spacer-t-1em spacer-b-1em">
+  <button mat-raised-button (click)="addUpgrade()">Add Upgrade</button>
+</mat-toolbar>
 
-<md-popover #healthPopover="mdPopover" x-position="after" y-position="below"
-            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
-  <md-card>
-    <md-card-content>
+<sat-popover #healthPopover horizontalAlign="after" verticalAlign="below">
+  <mat-card>
+    <mat-card-content>
       <p>The boost of health the pet will gain.<br>
         Format: [+-=][number]<br>
         Examples:<br>
@@ -13,21 +12,21 @@
         -3<br>
         =6
       </p>
-    </md-card-content>
-  </md-card>
-</md-popover>
+    </mat-card-content>
+  </mat-card>
+</sat-popover>
 
 <div *ngIf="skill">
-  <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
-    <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
+  <mat-expansion-panel *ngFor="let upgrade of skill.upgrades">
+    <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div>
-      <md-input-container>
-        <input mdInput placeholder="Health" [(ngModel)]="upgrade.health" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
-        <span mdSuffix>extra health</span>
-      </md-input-container>
-      <button md-icon-button [mdPopoverTriggerFor]="healthPopover">
-        <md-icon>info_outline</md-icon>
+      <mat-input-container>
+        <input matInput placeholder="Health" [(ngModel)]="upgrade.health" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <span matSuffix>extra health</span>
+      </mat-input-container>
+      <button mat-icon-button [satPopoverAnchorFor]="healthPopover">
+        <mat-icon>info_outline</mat-icon>
       </button>
     </div>
-  </md-expansion-panel>
+  </mat-expansion-panel>
 </div>
