--- a/src/app/components/skills/poison-skill/poison-skill.component.html
+++ b/src/app/components/skills/poison-skill/poison-skill.component.html
@@ -1,11 +1,10 @@
-<md-toolbar class="spacer-t-1em spacer-b-1em">
-  <button md-raised-button (click)="addUpgrade()">Add Upgrade</button>
-</md-toolbar>
+<mat-toolbar class="spacer-t-1em spacer-b-1em">
+  <button mat-raised-button (click)="addUpgrade()">Add Upgrade</button>
+</mat-toolbar>
 
-<md-popover #chancePopover="mdPopover" x-position="after" y-position="below"
-            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
-  <md-card>
-    <md-card-content>
+<sat-popover #chancePopover horizontalAlign="after" verticalAlign="below">
+  <mat-card>
+    <mat-card-content>
       <p>The chance the pet will poison it's target on hit.<br>
         Format: [+-=][number]<br>
         Examples:<br>
@@ -13,13 +12,12 @@
         -3<br>
         =6
       </p>
-    </md-card-content>
-  </md-card>
-</md-popover>
-<md-popover #durationPopover="mdPopover" x-position="after" y-position="below"
-            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
-  <md-card>
-    <md-card-content>
+    </mat-card-content>
+  </mat-card>
+</sat-popover>
+<sat-popover #durationPopover horizontalAlign="after" verticalAlign="below">
+  <mat-card>
+    <mat-card-content>
       <p>The duration the target will be poisioned.<br>
         Format: [+-=][number]<br>
         Examples:<br>
@@ -27,30 +25,30 @@
         -3<br>
         =6
       </p>
-    </md-card-content>
-  </md-card>
-</md-popover>
+    </mat-card-content>
+  </mat-card>
+</sat-popover>
 
 <div *ngIf="skill">
-  <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
-    <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
+  <mat-expansion-panel *ngFor="let upgrade of skill.upgrades">
+    <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div>
-      <md-input-container>
-        <input mdInput placeholder="Chance" [(ngModel)]="upgrade.chance" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
-        <span mdSuffix>%</span>
-      </md-input-container>
-      <button md-icon-button [mdPopoverTriggerFor]="chancePopover">
-        <md-icon>info_outline</md-icon>
+      <mat-input-container>
+        <input matInput placeholder="Chance" [(ngModel)]="upgrade.chance" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <span matSuffix>%</span>
+      </mat-input-container>
+      <button mat-icon-button [satPopoverAnchorFor]="chancePopover">
+        <mat-icon>info_outline</mat-icon>
       </button>
     </div>
     <div>
-      <md-input-container>
-        <input mdInput placeholder="Duration" [(ngModel)]="upgrade.duration" type="text" pattern="[+-=][0-9]+">
-        <span mdSuffix>sec</span>
-      </md-input-container>
-      <button md-icon-button [mdPopoverTriggerFor]="durationPopover">
-        <md-icon>info_outline</md-icon>
+      <mat-input-container>
+        <input matInput placeholder="Duration" [(ngModel)]="upgrade.duration" type="text" pattern="[+-=][0-9]+">
+        <span matSuffix>sec</span>
+      </mat-input-container>
+      <button mat-icon-button [satPopoverAnchorFor]="durationPopover">
+        <mat-icon>info_outline</mat-icon>
       </button>
     </div>
-  </md-expansion-panel>
+  </mat-expansion-panel>
 </div>
