--- a/src/app/components/skilltree-add-dialog/skilltree-add-dialog.component.html
+++ b/src/app/components/skilltree-add-dialog/skilltree-add-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 md-dialog-title>Add Skilltree</h1>
-<div md-dialog-content>Please enter a name.</div>
-<div md-dialog-actions>
-  <md-input-container>
-    <input mdInput placeholder="Skilltree Name" [(ngModel)]="name">
-  </md-input-container>
-  <button md-button (click)="done()" [disabled]="name.trim() == ''">Add</button>
+<h1 mat-dialog-title>Add Skilltree</h1>
+<div mat-dialog-content>Please enter a name.</div>
+<div mat-dialog-actions>
+  <mat-input-container>
+    <input matInput placeholder="Skilltree Name" [(ngModel)]="name">
+  </mat-input-container>
+  <button mat-button (click)="done()" [disabled]="name.trim() == ''">Add</button>
 </div>
