load icons locally

--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -27,7 +27,7 @@
         <span matSuffix>rows</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="rowsPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
