--- a/src/app/components/skills/beacon-skill/beacon-skill.component.html
+++ b/src/app/components/skills/beacon-skill/beacon-skill.component.html
@@ -52,7 +52,7 @@
         <span matSuffix>meters</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="rangePopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
@@ -62,7 +62,7 @@
         <span matSuffix>sec</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="durationPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
@@ -72,7 +72,7 @@
         <span matSuffix>buffs</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="countPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <mat-list dense>
