--- a/src/app/components/skills/health-boost-skill/health-boost-skill.component.html
+++ b/src/app/components/skills/health-boost-skill/health-boost-skill.component.html
@@ -25,7 +25,7 @@
         <span matSuffix>extra health</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="healthPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
   </mat-expansion-panel>
