--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -38,7 +38,7 @@
         <span matSuffix>meters</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="rangePopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
@@ -48,7 +48,7 @@
         <span matSuffix> x 50ms delay = shots/second</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="ratePopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
