--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -37,7 +37,7 @@
         <input matInput placeholder="Speed" [(ngModel)]="upgrade.speed" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="speedPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
@@ -47,7 +47,7 @@
         <span matSuffix>Blocks</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="jumpHeightPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
