--- a/src/app/components/skilltree-list/skilltree-list.component.html
+++ b/src/app/components/skilltree-list/skilltree-list.component.html
@@ -32,7 +32,7 @@
       </p>
       <span style="flex: 1 1 auto;"></span>
       <button mat-icon-button (click)="editSkills(skilltree)">
-        <mat-icon>create</mat-icon>
+        <mat-icon svgIcon="create">create</mat-icon>
       </button>
     </mat-list-item>
   </mat-nav-list>
