--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -25,7 +25,7 @@
       <span matSuffix>damage</span>
     </mat-input-container>
     <button mat-icon-button [satPopoverAnchorFor]="damagePopover">
-      <mat-icon>info_outline</mat-icon>
+      <mat-icon svgIcon="info_outline">info_outline</mat-icon>
     </button>
   </mat-expansion-panel>
 </div>
