--- a/src/app/components/skills/heal-skill/heal-skill.component.html
+++ b/src/app/components/skills/heal-skill/heal-skill.component.html
@@ -38,7 +38,7 @@
         <span matSuffix>sec</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="timerPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
@@ -48,7 +48,7 @@
         <span matSuffix>health</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="healthPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
   </mat-expansion-panel>
