--- a/src/app/components/skills/knockback-skill/knockback-skill.component.html
+++ b/src/app/components/skills/knockback-skill/knockback-skill.component.html
@@ -25,7 +25,7 @@
         <span matSuffix>%</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="chancePopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
   </mat-expansion-panel>
