--- a/src/app/components/skills/pickup-skill/pickup-skill.component.html
+++ b/src/app/components/skills/pickup-skill/pickup-skill.component.html
@@ -25,7 +25,7 @@
         <span matSuffix>meters</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="rangePopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
