--- a/src/app/components/skills/thorns-skill/thorns-skill.component.html
+++ b/src/app/components/skills/thorns-skill/thorns-skill.component.html
@@ -38,7 +38,7 @@
         <span matSuffix>%</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="chancePopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
     <div>
@@ -48,7 +48,7 @@
         <span matSuffix>%</span>
       </mat-input-container>
       <button mat-icon-button [satPopoverAnchorFor]="reflectionPopover">
-        <mat-icon>info_outline</mat-icon>
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
     </div>
   </mat-expansion-panel>
