load upgrade components dynamically

--- a/src/app/components/skill-editor/skill-editor.component.html
+++ b/src/app/components/skill-editor/skill-editor.component.html
@@ -8,4 +8,4 @@
   </mat-form-field>
 </mat-card>
 
-<app-skill-editor-upgrade></app-skill-editor-upgrade>
+<ng-template #upgradeComponent></ng-template>
